<resources>
    <string name="app_name">Mis Cupos</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="error_username_empry">Usernmae cannot be empty</string>
    <string name="error_password_empry">Password cannot be empty</string>
    <string name="error_login_invalid">Invalid Login</string>
    <string name="error_google_services_conection">No puede conectarse a los servicios de Google.Intente más tarde.</string>
    <string name="permission_denied">Permiso no aceptado</string>
    <string name="driver">Conductor</string>
    <string name="passenger">Pasajero</string>
    <!-- Main menu texts-->
    <string name="text_menu_my_profile">Mi Perfil</string>
    <string name="text_menu_my_quota">Mis Cupos</string>
    <string name="text_menu_map">Mapa</string>
    <string name="text_menu_information_app">Info</string>
    <string name="text_menu_configuration">Config</string>

    <string name="text_start_travel">Iniciar Recorrido</string>
    <string name="my_profile_driver">Conductor</string>
    <string name="text_community">Destino:Universidad Icesi</string>
    <string name="request_booking_text">Solicitar Cupo</string>
    <string name="cancel_booking_text">No, Gracias</string>
    <string name="hour_map">"Hora \n Llegada"</string>
    <string name="date_map">"Dia \n Viaje"</string>
    <!--- facebook -->
    <string name="facebook_app_id">1973609756218148</string>
    <string name="fb_login_protocol_scheme">fb1973609756218148</string>
    <string name="loginfb_cancel">La operacion se ha cancelado</string>
    <string name="loginfb_error">Ha ocurrido un error al iniciar con Facebook</string>
    <string name="loginfirebase_error">Ha ocurrido un error al iniciar con firebase</string>
    <!-- Comunity Chooser-->
    <string name="choose_community">Elige tu comunidad</string>
    <string name="txt_icesi">Icesi</string>
    <string name="txt_javeriana">javeriana</string>
    <!-- Register Screen-->
    <string name="register">Regístrate</string>
    <string name="register_name">Nombre y Apellido</string>
    <string name="register_email">Correo Electrónico</string>
    <string name="register_phone">Número de Celular</string>
    <string name="register_btn">Continuar</string>
    <!-- Errors texts -->
    <string name="error_empty_date">Debe escoger una fecha</string>
    <string name="error_empty_hour">Debe escoger una hora</string>
    <string name="error_empty_community">Debe escoger una comunidad</string>
    <string name="error_empty_coordinates">Posición actual no detectada.Intente más tarde.</string>
    <string name="error_empty_from_or_to">Debes escoger lugar de partida y destino</string>

    <string name="text_cancel_booking">Finalizar recorrido</string>
    <string name="my_booking_passenger_searching">Buscando..</string>
    <string name="my_booking_passenger_description">Espera un poco, un cupo perfecto \n para ti  está a punto de llegar</string>
    <string name="my_booking_passenger_button_cancel_booking">Cancelar Cupo</string>
    <string name="my_booking_passenger_not_selected_values">No ha seleccionado datos para su viaje.</string>
    <string name="network_not_available">No hay conexión a internet</string>
    <string name="error_empty_fields">Debe llenar todos los campos</string>
    <string name="error_phone_number_characters">Su número celular debe contener 10 catacteres. Ej: 3013051455</string>
    <string name="dialog_request_booking">¿Quieres solicitar este nuevo cupo?</string>
    <string name="dialog_starting_point_description">Punto de partida:</string>
    <string name="final_point_description">Destino:</string>
    <string name="already_data_choosen_driver">Ya seleccionó datos. Cancele la ruta en la pantalla mis cupos para seleccionar una nueva.</string>
    <string name="already_data_choosen_passenger">Ya solicitó un cupo. Si quiere solicitar uno nuevo cancélelo en la pantalla mis cupos.</string>
    <string name="deleted_hour_and_date">Ha cambiado de rol. Su hora y día fueron borradas.</string>
    <string name="error_time_range">Debe usar rangos de media hora. Ej: 6:30, 5:00</string>
    <string name="title_activity_video">Tutorial</string>
    <string name="txt_app_title">MIS CUPOS</string>
    <string name="txt_app_slogan">La movilidad en comunidad</string>
    <string name="text_i_am_drvier">Soy conductor</string>
    <string name="text_i_am_passenger">Soy pasajero</string>
    <!-- Terms and conditions -->
    <string name="terms_and_condition_title">Términos y condiciones</string>
    <string name="terms_and_condition_content">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident,sunt in culpa qui officia deserunt mollit anim id est
        laborum.\
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident,sunt in culpa qui officia deserunt mollit anim id est
        laborum.
        "</string>
    <string name="terms_and_condition_accept">
        Autorizo el tratamiento de mis datos personales,\ny he leído y estoy de acuerdo con los términos\ny condiciones y política de tratamiento de datos.
</string>
    <string name="close_sesion">Cerrar Sesión</string>
    <string name="report_issue">Reportar un problema</string>
    <string name="btn_copy_text">copiar</string>
    <string name="car_plate">Placa</string>
    <string name="car_color">Color</string>
    <string name="car_model">Modelo</string>
    <string name="are_your_driver">Eres conductor?</string>
    <string name="certificate_user">Certificar Usuario</string>
    <string name="txt_route_description">Último Viaje Programado</string>
    <string name="text_configuration">Configuración</string>
    <string name="btn_cancel_driver">Cancelar Conductor</string>
    <string name="departure_date_message">Fecha</string>
    <string name="arrival_date_message">Fecha</string>
    <string name="departure_hour_message">Hora\nSalida</string>
    <string name="arrival_hour_message">Hora\nllegada</string>
    <string name="close_facebook">Desvincular cuenta de Facebook</string>
    <string name="accept_booking_text">Aceptar Cupo</string>
    <string name="report_user">Reportar Usuario</string>
</resources>
