<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_my_profile"
        android:enabled="true"
        android:icon="@drawable/icon_my_profile"
        android:title="@string/text_menu_my_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_my_quota"
        android:enabled="true"
        android:icon="@drawable/icon_my_booking"
        android:title="@string/text_menu_my_quota"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:title="@string/text_menu_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_information_app"
        android:enabled="true"
        android:title="@string/text_menu_information_app"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_configuration"
        android:enabled="true"
        android:title="@string/text_menu_configuration"
        app:showAsAction="ifRoom" />
</menu>