<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cupos_blue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_register"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:paddingEnd="@dimen/margin_register"
        android:paddingStart="@dimen/margin_register"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/edit_name"
        style="@style/RegisterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_name" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/RegisterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_phone"
        style="@style/RegisterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_phone"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/register_btn"
            android:textColor="@color/cupos_blue"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>