<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cupos_soft_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_configuration_title"
        style="@style/ConfigurationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_super_extra_large"
        android:text="@string/text_menu_configuration" />

    <Button
        android:id="@+id/btn_report_issue"
        style="@style/WhiteRectangularButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_configuration_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/report_issue"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_active_user"
        style="@style/WhiteRectangularButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_configuration_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/report_issue"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_close_session"
        style="@style/RoundedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/close_sesion" />

</RelativeLayout>
