<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnOrderPreserved="false"
    android:columnCount="3"
    android:useDefaultMargins="true">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/choose_community"
        android:textSize="30sp"
        android:layout_columnSpan="3"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/cupos_blue"
        />

    <Button
        android:id="@+id/btn_icesi"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/txt_icesi"
        android:textColor="@color/cupos_blue"/>

    <Button
        android:id="@+id/btn_javeriana"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/txt_javeriana"
        android:textColor="@color/cupos_blue"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_column="2"
        android:layout_row="1" />

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_column="0"
        android:layout_row="2" />

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_column="1"
        android:layout_row="2" />

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_column="2"
        android:layout_row="2" />

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_column="0"
        android:layout_row="3" />

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_column="1"
        android:layout_row="3" />

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_column="2"
        android:layout_row="3" />


</GridLayout>